--- a/Guided_Project_Exploring_eBay_Car_Sales_Data/Exploring eBay Car Sales Data.ipynb
+++ b/Guided_Project_Exploring_eBay_Car_Sales_Data/Exploring eBay Car Sales Data.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
    "source": [
     "We'll use pandas [read_csv](https://pandas.pydata.org/docs/reference/api/pandas.read_csv.html?highlight=read_csv#pandas-read-csv) function to read the dataset.\n",
     "\n",
-    "Note: The encoding for dataset is `Latin-1`"
+    "Note: We'll use `Latin-1` encoding for dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +105,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the columns `vehicleType`, `gearbox`, `model`, `fuelType` and `notRepairedDamage` contains null values."
+    "- We can see that the columns `vehicleType`, `gearbox`, `model`, `fuelType` and `notRepairedDamage` contains null values.\n",
+    "- The column names use camelcase instead of Python's preferred snakecase, which means we can't just replace spaces with underscores."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +314,7 @@
        "4       39218  2016-04-01 14:38:50  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,8 +329,433 @@
    "source": [
     "We can observe in the content of the first 5 columns.\n",
     "- All colums (`dateCrawled`, `dateCreated`, `lastSeen`) that contain a date are actually datetimes.\n",
-    "- In the `price` column the amounts are formatted as American currency, for example `$1,000.00`.\n",
+    "- In the `price` column the amounts are formatted as US dollar, for example `$1,000.00`.\n",
     "- In the `odometer` column the quantities contain the subfix of the unit of measure (`km`) and contain commas. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Snakecase for columns name\n",
+    "As we saw earlier, the column names are in `camelcase`, the first thing we will do is cleaning them to `snakecase` (Python convention). For that we'll use the [rename](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html?highlight=rename#pandas.DataFrame.rename) function of dataframe.\n",
+    "\n",
+    "\n",
+    "For some columns we'll make an special rename of column:\n",
+    "- `yearOfRegistration` to `registration_year`\n",
+    "- `monthOfRegistration` to `registration_month`\n",
+    "- `notRepairedDamage` to `unrepaired_damage`\n",
+    "- `dateCreated` to `ad_created`\n",
+    "- `nrOfPictures` to `nr_pictures`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The key are the current colum name\n",
+    "# The value are the new column name.\n",
+    "columns = {\n",
+    "    'dateCrawled': 'date_crawled',\n",
+    "    'offerType': 'offer_type',\n",
+    "    'vehicleType': 'vehicle_type',\n",
+    "    'powerPS': 'power_ps',\n",
+    "    'fuelType': 'fuel_type',\n",
+    "    'postalCode': 'postal_code',\n",
+    "    'lastSeen': 'last_seen',\n",
+    "    'yearOfRegistration': 'registration_year',\n",
+    "    'monthOfRegistration': 'registration_month',\n",
+    "    'notRepairedDamage': 'unrepaired_damage',\n",
+    "    'dateCreated': 'ad_created',\n",
+    "    'nrOfPictures': 'nr_pictures'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_crawled</th>\n",
+       "      <th>name</th>\n",
+       "      <th>seller</th>\n",
+       "      <th>offer_type</th>\n",
+       "      <th>price</th>\n",
+       "      <th>abtest</th>\n",
+       "      <th>vehicle_type</th>\n",
+       "      <th>registration_year</th>\n",
+       "      <th>gearbox</th>\n",
+       "      <th>power_ps</th>\n",
+       "      <th>model</th>\n",
+       "      <th>odometer</th>\n",
+       "      <th>registration_month</th>\n",
+       "      <th>fuel_type</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>unrepaired_damage</th>\n",
+       "      <th>ad_created</th>\n",
+       "      <th>nr_pictures</th>\n",
+       "      <th>postal_code</th>\n",
+       "      <th>last_seen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-03-26 17:47:46</td>\n",
+       "      <td>Peugeot_807_160_NAVTECH_ON_BOARD</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$5,000</td>\n",
+       "      <td>control</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>manuell</td>\n",
+       "      <td>158</td>\n",
+       "      <td>andere</td>\n",
+       "      <td>150,000km</td>\n",
+       "      <td>3</td>\n",
+       "      <td>lpg</td>\n",
+       "      <td>peugeot</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-26 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>79588</td>\n",
+       "      <td>2016-04-06 06:45:54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-04-04 13:38:56</td>\n",
+       "      <td>BMW_740i_4_4_Liter_HAMANN_UMBAU_Mega_Optik</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$8,500</td>\n",
+       "      <td>control</td>\n",
+       "      <td>limousine</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>automatik</td>\n",
+       "      <td>286</td>\n",
+       "      <td>7er</td>\n",
+       "      <td>150,000km</td>\n",
+       "      <td>6</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>bmw</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-04-04 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71034</td>\n",
+       "      <td>2016-04-06 14:45:08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-03-26 18:57:24</td>\n",
+       "      <td>Volkswagen_Golf_1.6_United</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$8,990</td>\n",
+       "      <td>test</td>\n",
+       "      <td>limousine</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>manuell</td>\n",
+       "      <td>102</td>\n",
+       "      <td>golf</td>\n",
+       "      <td>70,000km</td>\n",
+       "      <td>7</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>volkswagen</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-26 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35394</td>\n",
+       "      <td>2016-04-06 20:15:37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-03-12 16:58:10</td>\n",
+       "      <td>Smart_smart_fortwo_coupe_softouch/F1/Klima/Pan...</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$4,350</td>\n",
+       "      <td>control</td>\n",
+       "      <td>kleinwagen</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>automatik</td>\n",
+       "      <td>71</td>\n",
+       "      <td>fortwo</td>\n",
+       "      <td>70,000km</td>\n",
+       "      <td>6</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>smart</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-12 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33729</td>\n",
+       "      <td>2016-03-15 03:16:28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-04-01 14:38:50</td>\n",
+       "      <td>Ford_Focus_1_6_Benzin_TÜV_neu_ist_sehr_gepfleg...</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$1,350</td>\n",
+       "      <td>test</td>\n",
+       "      <td>kombi</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>manuell</td>\n",
+       "      <td>0</td>\n",
+       "      <td>focus</td>\n",
+       "      <td>150,000km</td>\n",
+       "      <td>7</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>ford</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-04-01 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>39218</td>\n",
+       "      <td>2016-04-01 14:38:50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>2016-03-27 14:38:19</td>\n",
+       "      <td>Audi_Q5_3.0_TDI_qu._S_tr.__Navi__Panorama__Xenon</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$24,900</td>\n",
+       "      <td>control</td>\n",
+       "      <td>limousine</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>automatik</td>\n",
+       "      <td>239</td>\n",
+       "      <td>q5</td>\n",
+       "      <td>100,000km</td>\n",
+       "      <td>1</td>\n",
+       "      <td>diesel</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-27 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>82131</td>\n",
+       "      <td>2016-04-01 13:47:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>2016-03-28 10:50:25</td>\n",
+       "      <td>Opel_Astra_F_Cabrio_Bertone_Edition___TÜV_neu+...</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$1,980</td>\n",
+       "      <td>control</td>\n",
+       "      <td>cabrio</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>manuell</td>\n",
+       "      <td>75</td>\n",
+       "      <td>astra</td>\n",
+       "      <td>150,000km</td>\n",
+       "      <td>5</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>opel</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-28 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>44807</td>\n",
+       "      <td>2016-04-02 14:18:02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>2016-04-02 14:44:48</td>\n",
+       "      <td>Fiat_500_C_1.2_Dualogic_Lounge</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$13,200</td>\n",
+       "      <td>test</td>\n",
+       "      <td>cabrio</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>automatik</td>\n",
+       "      <td>69</td>\n",
+       "      <td>500</td>\n",
+       "      <td>5,000km</td>\n",
+       "      <td>11</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>fiat</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-04-02 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>73430</td>\n",
+       "      <td>2016-04-04 11:47:27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>2016-03-08 19:25:42</td>\n",
+       "      <td>Audi_A3_2.0_TDI_Sportback_Ambition</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$22,900</td>\n",
+       "      <td>control</td>\n",
+       "      <td>kombi</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>manuell</td>\n",
+       "      <td>150</td>\n",
+       "      <td>a3</td>\n",
+       "      <td>40,000km</td>\n",
+       "      <td>11</td>\n",
+       "      <td>diesel</td>\n",
+       "      <td>audi</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-08 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35683</td>\n",
+       "      <td>2016-04-05 16:45:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>2016-03-14 00:42:12</td>\n",
+       "      <td>Opel_Vectra_1.6_16V</td>\n",
+       "      <td>privat</td>\n",
+       "      <td>Angebot</td>\n",
+       "      <td>$1,250</td>\n",
+       "      <td>control</td>\n",
+       "      <td>limousine</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>manuell</td>\n",
+       "      <td>101</td>\n",
+       "      <td>vectra</td>\n",
+       "      <td>150,000km</td>\n",
+       "      <td>1</td>\n",
+       "      <td>benzin</td>\n",
+       "      <td>opel</td>\n",
+       "      <td>nein</td>\n",
+       "      <td>2016-03-13 00:00:00</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45897</td>\n",
+       "      <td>2016-04-06 21:18:48</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 20 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date_crawled                                               name  \\\n",
+       "0      2016-03-26 17:47:46                   Peugeot_807_160_NAVTECH_ON_BOARD   \n",
+       "1      2016-04-04 13:38:56         BMW_740i_4_4_Liter_HAMANN_UMBAU_Mega_Optik   \n",
+       "2      2016-03-26 18:57:24                         Volkswagen_Golf_1.6_United   \n",
+       "3      2016-03-12 16:58:10  Smart_smart_fortwo_coupe_softouch/F1/Klima/Pan...   \n",
+       "4      2016-04-01 14:38:50  Ford_Focus_1_6_Benzin_TÜV_neu_ist_sehr_gepfleg...   \n",
+       "...                    ...                                                ...   \n",
+       "49995  2016-03-27 14:38:19   Audi_Q5_3.0_TDI_qu._S_tr.__Navi__Panorama__Xenon   \n",
+       "49996  2016-03-28 10:50:25  Opel_Astra_F_Cabrio_Bertone_Edition___TÜV_neu+...   \n",
+       "49997  2016-04-02 14:44:48                     Fiat_500_C_1.2_Dualogic_Lounge   \n",
+       "49998  2016-03-08 19:25:42                 Audi_A3_2.0_TDI_Sportback_Ambition   \n",
+       "49999  2016-03-14 00:42:12                                Opel_Vectra_1.6_16V   \n",
+       "\n",
+       "       seller offer_type    price   abtest vehicle_type  registration_year  \\\n",
+       "0      privat    Angebot   $5,000  control          bus               2004   \n",
+       "1      privat    Angebot   $8,500  control    limousine               1997   \n",
+       "2      privat    Angebot   $8,990     test    limousine               2009   \n",
+       "3      privat    Angebot   $4,350  control   kleinwagen               2007   \n",
+       "4      privat    Angebot   $1,350     test        kombi               2003   \n",
+       "...       ...        ...      ...      ...          ...                ...   \n",
+       "49995  privat    Angebot  $24,900  control    limousine               2011   \n",
+       "49996  privat    Angebot   $1,980  control       cabrio               1996   \n",
+       "49997  privat    Angebot  $13,200     test       cabrio               2014   \n",
+       "49998  privat    Angebot  $22,900  control        kombi               2013   \n",
+       "49999  privat    Angebot   $1,250  control    limousine               1996   \n",
+       "\n",
+       "         gearbox  power_ps   model   odometer  registration_month fuel_type  \\\n",
+       "0        manuell       158  andere  150,000km                   3       lpg   \n",
+       "1      automatik       286     7er  150,000km                   6    benzin   \n",
+       "2        manuell       102    golf   70,000km                   7    benzin   \n",
+       "3      automatik        71  fortwo   70,000km                   6    benzin   \n",
+       "4        manuell         0   focus  150,000km                   7    benzin   \n",
+       "...          ...       ...     ...        ...                 ...       ...   \n",
+       "49995  automatik       239      q5  100,000km                   1    diesel   \n",
+       "49996    manuell        75   astra  150,000km                   5    benzin   \n",
+       "49997  automatik        69     500    5,000km                  11    benzin   \n",
+       "49998    manuell       150      a3   40,000km                  11    diesel   \n",
+       "49999    manuell       101  vectra  150,000km                   1    benzin   \n",
+       "\n",
+       "            brand unrepaired_damage           ad_created  nr_pictures  \\\n",
+       "0         peugeot              nein  2016-03-26 00:00:00            0   \n",
+       "1             bmw              nein  2016-04-04 00:00:00            0   \n",
+       "2      volkswagen              nein  2016-03-26 00:00:00            0   \n",
+       "3           smart              nein  2016-03-12 00:00:00            0   \n",
+       "4            ford              nein  2016-04-01 00:00:00            0   \n",
+       "...           ...               ...                  ...          ...   \n",
+       "49995        audi              nein  2016-03-27 00:00:00            0   \n",
+       "49996        opel              nein  2016-03-28 00:00:00            0   \n",
+       "49997        fiat              nein  2016-04-02 00:00:00            0   \n",
+       "49998        audi              nein  2016-03-08 00:00:00            0   \n",
+       "49999        opel              nein  2016-03-13 00:00:00            0   \n",
+       "\n",
+       "       postal_code            last_seen  \n",
+       "0            79588  2016-04-06 06:45:54  \n",
+       "1            71034  2016-04-06 14:45:08  \n",
+       "2            35394  2016-04-06 20:15:37  \n",
+       "3            33729  2016-03-15 03:16:28  \n",
+       "4            39218  2016-04-01 14:38:50  \n",
+       "...            ...                  ...  \n",
+       "49995        82131  2016-04-01 13:47:40  \n",
+       "49996        44807  2016-04-02 14:18:02  \n",
+       "49997        73430  2016-04-04 11:47:27  \n",
+       "49998        35683  2016-04-05 16:45:07  \n",
+       "49999        45897  2016-04-06 21:18:48  \n",
+       "\n",
+       "[50000 rows x 20 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos.rename(columns=columns)"
    ]
   }
  ],
