--- a/Guided_Project_Exploring_eBay_Car_Sales_Data/Exploring eBay Car Sales Data.ipynb
+++ b/Guided_Project_Exploring_eBay_Car_Sales_Data/Exploring eBay Car Sales Data.ipynb
@@ -497,7 +497,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>2016-03-27 22:55:05</td>\n",
+       "      <td>2016-03-08 10:40:35</td>\n",
        "      <td>Ford_Fiesta</td>\n",
        "      <td>privat</td>\n",
        "      <td>Angebot</td>\n",
@@ -710,7 +710,7 @@
        "               date_crawled         name  seller offer_type  price abtest  \\\n",
        "count                 50000        50000   50000      50000  50000  50000   \n",
        "unique                48213        38754       2          2   2357      2   \n",
-       "top     2016-03-27 22:55:05  Ford_Fiesta  privat    Angebot     $0   test   \n",
+       "top     2016-03-08 10:40:35  Ford_Fiesta  privat    Angebot     $0   test   \n",
        "freq                      3           78   49999      49999   1421  25756   \n",
        "mean                    NaN          NaN     NaN        NaN    NaN    NaN   \n",
        "std                     NaN          NaN     NaN        NaN    NaN    NaN   \n",
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "Length: 2357, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,6 +938,296 @@
    "source": [
     "autos.rename(columns={'odometer': 'odometer_km'}, inplace=True)\n",
     "autos.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exploring the Odometer and Price Columns\n",
+    "\n",
+    "We'll analyze the columns using minimum and maximum values and look for any values that look unrealistically high or low (outliers) that we might want to remove."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll use the next technique to expolring odometer and price columns:\n",
+    "- [Series.unique().shape](https://pandas.pydata.org/docs/reference/api/pandas.Series.unique.html?highlight=unique#pandas.Series.unique()) to see how many unique values\n",
+    "- Series.describe() to view min/max/median/mean etc.\n",
+    "- Series.value_counts(), to see counts of unique values:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the Odometer Column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odometer_km = autos['odometer_km']\n",
+    "odometer_km.unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     50000.000000\n",
+       "mean     125732.700000\n",
+       "std       40042.211706\n",
+       "min        5000.000000\n",
+       "25%      125000.000000\n",
+       "50%      150000.000000\n",
+       "75%      150000.000000\n",
+       "max      150000.000000\n",
+       "Name: odometer_km, dtype: float64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odometer_km.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use [Series.sort_index()](https://pandas.pydata.org/docs/reference/api/pandas.Series.sort_index.html?highlight=sort_index#pandas.Series.sort_index) whit `ascending` param, to get the values_counts result ordered."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150000    32424\n",
+       "125000     5170\n",
+       "100000     2169\n",
+       "90000      1757\n",
+       "80000      1436\n",
+       "70000      1230\n",
+       "60000      1164\n",
+       "50000      1027\n",
+       "40000       819\n",
+       "30000       789\n",
+       "20000       784\n",
+       "10000       264\n",
+       "5000        967\n",
+       "Name: odometer_km, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos['odometer_km'].value_counts().sort_index(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that no value has any is very separate from another, and that it does not have a low frequency."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the Price Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2357,)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price = autos['price']\n",
+    "price.unique().shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    5.000000e+04\n",
+       "mean     9.840044e+03\n",
+       "std      4.811044e+05\n",
+       "min      0.000000e+00\n",
+       "25%      1.100000e+03\n",
+       "50%      2.950000e+03\n",
+       "75%      7.200000e+03\n",
+       "max      1.000000e+08\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `price` column has `2357` values, which makes it hard to analyze, we'll use [Series.head()](https://pandas.pydata.org/docs/reference/api/pandas.Series.head.html?highlight=head#pandas.Series.head) and [Series.tails()](https://pandas.pydata.org/docs/reference/api/pandas.Series.tail.html?highlight=tail#pandas.Series.tail) to see the top and last one's values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99999999    1\n",
+       "27322222    1\n",
+       "12345678    3\n",
+       "11111111    2\n",
+       "10000000    1\n",
+       "3890000     1\n",
+       "1300000     1\n",
+       "1234566     1\n",
+       "999999      2\n",
+       "999990      1\n",
+       "350000      1\n",
+       "345000      1\n",
+       "299000      1\n",
+       "295000      1\n",
+       "265000      1\n",
+       "259000      1\n",
+       "250000      1\n",
+       "220000      1\n",
+       "198000      1\n",
+       "197000      1\n",
+       "Name: price, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price.value_counts().sort_index(ascending=False).head(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that after the value 350,000  you start to see a very large separation of values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35       1\n",
+       "30       7\n",
+       "29       1\n",
+       "25       5\n",
+       "20       4\n",
+       "18       1\n",
+       "17       3\n",
+       "15       2\n",
+       "14       1\n",
+       "13       2\n",
+       "12       3\n",
+       "11       2\n",
+       "10       7\n",
+       "9        1\n",
+       "8        1\n",
+       "5        2\n",
+       "3        1\n",
+       "2        3\n",
+       "1      156\n",
+       "0     1421\n",
+       "Name: price, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price.value_counts().sort_index(ascending=False).tail(20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We tend to believe that cars priced at 0 are because the information was not available at the time. \n",
+    "\n",
+    "Therefore we'll only left the values between 1 and 350,000 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autos_clean_price = autos[price.between(1, 350000)]"
    ]
   }
  ],
