Update Exploring eBay Car Sales Data.ipynb

--- a/Guided_Project_Exploring_eBay_Car_Sales_Data/Exploring eBay Car Sales Data.ipynb
+++ b/Guided_Project_Exploring_eBay_Car_Sales_Data/Exploring eBay Car Sales Data.ipynb
@@ -497,7 +497,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>2016-04-02 15:49:30</td>\n",
+       "      <td>2016-03-09 11:54:38</td>\n",
        "      <td>Ford_Fiesta</td>\n",
        "      <td>privat</td>\n",
        "      <td>Angebot</td>\n",
@@ -710,7 +710,7 @@
        "               date_crawled         name  seller offer_type  price abtest  \\\n",
        "count                 50000        50000   50000      50000  50000  50000   \n",
        "unique                48213        38754       2          2   2357      2   \n",
-       "top     2016-04-02 15:49:30  Ford_Fiesta  privat    Angebot     $0   test   \n",
+       "top     2016-03-09 11:54:38  Ford_Fiesta  privat    Angebot     $0   test   \n",
        "freq                      3           78   49999      49999   1421  25756   \n",
        "mean                    NaN          NaN     NaN        NaN    NaN    NaN   \n",
        "std                     NaN          NaN     NaN        NaN    NaN    NaN   \n",
@@ -2397,6 +2397,448 @@
    "metadata": {},
    "source": [
     "We can see a all models have approximately the same mileage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning next steps\n",
+    "\n",
+    "We'll start by convert the dates to be uniform numeric data, so \"2016-03-21\" becomes the integer 20160321. The columns we'll covert are:\n",
+    " - `date_crawled`\n",
+    " - `ad_created`\n",
+    " - `last_seen`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['date_crawled', 'name', 'seller', 'offer_type', 'price', 'abtest',\n",
+       "       'vehicle_type', 'registration_year', 'gearbox', 'power_ps', 'model',\n",
+       "       'odometer_km', 'registration_month', 'fuel_type', 'brand',\n",
+       "       'unrepaired_damage', 'ad_created', 'nr_pictures', 'postal_code',\n",
+       "       'last_seen'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date_crawled</th>\n",
+       "      <th>ad_created</th>\n",
+       "      <th>last_seen</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20160326</td>\n",
+       "      <td>20160326</td>\n",
+       "      <td>20160406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20160404</td>\n",
+       "      <td>20160404</td>\n",
+       "      <td>20160406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20160326</td>\n",
+       "      <td>20160326</td>\n",
+       "      <td>20160406</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20160312</td>\n",
+       "      <td>20160312</td>\n",
+       "      <td>20160315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>20160401</td>\n",
+       "      <td>20160401</td>\n",
+       "      <td>20160401</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   date_crawled  ad_created  last_seen\n",
+       "0      20160326    20160326   20160406\n",
+       "1      20160404    20160404   20160406\n",
+       "2      20160326    20160326   20160406\n",
+       "3      20160312    20160312   20160315\n",
+       "4      20160401    20160401   20160401"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos['date_crawled']= autos['date_crawled'].str[:10].str.replace('-','').astype(int)\n",
+    "autos['ad_created'] = autos['ad_created'].str[:10].str.replace('-','').astype(int)\n",
+    "autos['last_seen'] = autos['last_seen'].str[:10].str.replace('-','').astype(int)\n",
+    "\n",
+    "autos[['date_crawled', 'ad_created', 'last_seen']].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we'll see if there are particular keywords in the name column that you can extract as new columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ford_Fiesta                                       76\n",
+       "Volkswagen_Golf_1.4                               75\n",
+       "BMW_316i                                          75\n",
+       "Volkswagen_Polo                                   72\n",
+       "BMW_318i                                          72\n",
+       "                                                  ..\n",
+       "Skoda_Roomster_mit_AHK_und_allem_Komfort           1\n",
+       "Mercedes_Benz_E_220_CDI_Automatik_Classic_W211     1\n",
+       "Golf_4_1.6_sr_Klimatronik_ele_Fenster              1\n",
+       "Mercedes_Benz__C_200                               1\n",
+       "Renault_Laguna_mit_Tuev                            1\n",
+       "Name: name, Length: 36982, dtype: int64"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos['name'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the name does not maintain a specific pattern with which it can work, the name values include information about the model and engine of the car, the dataset already has a column with the model car."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring most common Model.\n",
+    "\n",
+    "We'll find the most common brand/model combinations:\n",
+    "- First, we'll use pd.Dataframe.groupby method to make the aggregations for brand and model columns.\n",
+    "- Then we'll use pd.DataFrameGroupBy.size method to make the count of aggregations.\n",
+    "- Last we'll use pd.DataFrame.sort_values method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "brand       model     \n",
+       "volkswagen  golf          3815\n",
+       "bmw         3er           2688\n",
+       "volkswagen  polo          1677\n",
+       "opel        corsa         1644\n",
+       "            astra         1388\n",
+       "                          ... \n",
+       "audi        200              1\n",
+       "rover       discovery        1\n",
+       "            rangerover       1\n",
+       "bmw         i3               1\n",
+       "ford        b_max            1\n",
+       "Length: 290, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos.groupby([\"brand\", 'model']).size().sort_values(ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x7efe530ecca0>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos.groupby([\"brand\", 'model'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The most common car is the `Volkswagen` `Golf`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring Mileage vs Price\n",
+    "\n",
+    "We'll split the `odometer_km` into groups, and use aggregation to see if average prices follows any patterns based on the mileage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     47986.000000\n",
+       "mean     125611.011545\n",
+       "std       40035.616409\n",
+       "min        5000.000000\n",
+       "25%      100000.000000\n",
+       "50%      150000.000000\n",
+       "75%      150000.000000\n",
+       "max      150000.000000\n",
+       "Name: odometer_km, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos['odometer_km'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  5000,  10000,  20000,  30000,  40000,  50000,  60000,  70000,\n",
+       "        80000,  90000, 100000, 125000, 150000])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mileage = autos['odometer_km'].unique()\n",
+    "mileage.sort()\n",
+    "mileage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We; ll define four groups of mileage, stating for 50000 was the min value of `odometer_km`, to define each group we sum the standard deviation value and selecting the value of the close of the unique values of  `odometer_km`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mileage_groups = [(5000, 40000), (50000, 70000), (80000, 100000), (125000, 150000)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'5000 - 40000': 23484.200576368876,\n",
+       " '50000 - 70000': 15857.369682444578,\n",
+       " '80000 - 100000': 10412.213749277875,\n",
+       " '125000 - 150000': 7536.564624148951}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mileage_mean_price = {}\n",
+    "for group in mileage_groups:\n",
+    "    mileage_mean_price[f'{group[0]} - {group[1]}'] = autos[autos['odometer_km'].between(group[0],group[1])]['price'].mean()\n",
+    "\n",
+    "mileage_mean_price"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that cars with lower mileage on average are more expensive.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring price of car damage vs non-damaged."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "not_rep_dam = {'nein': 'no',\n",
+    "               'ja': 'yes',\n",
+    "               np.nan : 'unknown'}\n",
+    "autos['unrepaired_damage'] = autos['unrepaired_damage'].map(not_rep_dam)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['no', 'unknown', 'yes'], dtype=object)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos['unrepaired_damage'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2317.5163248221015"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos[autos['unrepaired_damage']=='yes']['price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8223.002161214954"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "autos[autos['unrepaired_damage']=='no']['price'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that on average the cars non-damage are more expensive."
    ]
   }
  ],
