--- a/Storytelling_Data_Visualization_Exchange_Rates/basics.ipynb
+++ b/Storytelling_Data_Visualization_Exchange_Rates/basics.ipynb
@@ -1069,26 +1069,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2016, 2017, 2018, 2019, 2020])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "euro_to_dollar_after  = euro_to_dollar[euro_to_dollar['Time'].dt.year == 2020]\n",
     "euro_to_dollar_pandemic = euro_to_dollar[euro_to_dollar['Time'].dt.year == 2020]\n",
-    "euro_to_dollar_period = euro_to_dollar[euro_to_dollar['Time'].dt.year.between(2016, 2020)]\n",
-    "\n",
-    "euro_to_dollar_period['Time'].dt.year.unique()"
+    "euro_to_dollar_period = euro_to_dollar[euro_to_dollar['Time'].dt.year.between(2016, 2020)]"
    ]
   },
   {
