3. Clean Column Names

--- a/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
+++ b/Clean_And_Analyze_Employee_Exit_Survey/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "73b3609a",
+   "id": "3c1ed37a",
    "metadata": {},
    "source": [
     "# Clean and Analyze Employee Exit Surveys\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b4f686",
+   "id": "743ba49d",
    "metadata": {},
    "source": [
     "## Exploring the surveys\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b9a9ebb9",
+   "id": "ec79aacf",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ba36012",
+   "id": "291e3f8d",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6af5c2d8",
+   "id": "4eb90633",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "239aea52",
+   "id": "58322231",
    "metadata": {},
    "outputs": [
     {
@@ -405,18 +405,18 @@
        "08/2013        12\n",
        "05/2013         7\n",
        "05/2012         6\n",
-       "02/2014         2\n",
-       "04/2013         2\n",
        "04/2014         2\n",
-       "08/2012         2\n",
        "07/2014         2\n",
+       "08/2012         2\n",
+       "04/2013         2\n",
+       "02/2014         2\n",
        "09/2010         1\n",
-       "07/2006         1\n",
        "11/2012         1\n",
-       "09/2014         1\n",
-       "2014            1\n",
-       "2010            1\n",
        "07/2012         1\n",
+       "2010            1\n",
+       "07/2006         1\n",
+       "2014            1\n",
+       "09/2014         1\n",
        "Name: Cease Date, dtype: int64"
       ]
      },
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6e094894",
+   "id": "8b6986ed",
    "metadata": {},
    "outputs": [
     {
@@ -453,33 +453,33 @@
        "1990          20\n",
        "1996          19\n",
        "1999          19\n",
-       "2000          18\n",
        "1992          18\n",
        "2004          18\n",
        "1991          18\n",
+       "2000          18\n",
        "1989          17\n",
        "2002          15\n",
-       "1978          15\n",
-       "1988          15\n",
        "1976          15\n",
+       "1978          15\n",
        "2003          15\n",
-       "1979          14\n",
-       "1998          14\n",
+       "1988          15\n",
        "1997          14\n",
        "1980          14\n",
+       "1979          14\n",
        "1974          14\n",
        "1995          14\n",
+       "1998          14\n",
        "1993          13\n",
        "1972          12\n",
        "1986          12\n",
        "1977          11\n",
-       "1984          10\n",
        "1994          10\n",
-       "1971          10\n",
-       "2001          10\n",
        "1969          10\n",
-       "1981           9\n",
+       "2001          10\n",
+       "1971          10\n",
+       "1984          10\n",
        "1983           9\n",
+       "1981           9\n",
        "1985           8\n",
        "1973           8\n",
        "1987           7\n",
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc8fb9c1",
+   "id": "3480bc73",
    "metadata": {},
    "source": [
     "From the DETE survey, we observe the following:\n",
@@ -515,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d8c0b207",
+   "id": "7b3e0f33",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "68611d60",
+   "id": "502c37e8",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fbdef4b9",
+   "id": "cf08ad15",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bc8d80e4",
+   "id": "79c9ad60",
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48af06d1",
+   "id": "65d29be0",
    "metadata": {},
    "source": [
     "From the TAFE survey, we observe the following:\n",
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78834769",
+   "id": "8d639620",
    "metadata": {},
    "source": [
     "## Identify Missing Values and Drop Unnecessary Columns\n",
@@ -982,7 +982,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6b5273eb",
+   "id": "caf18a54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,22 +991,178 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36efe67d",
+   "id": "2a6d21cb",
    "metadata": {},
    "source": [
     "Both the dete_survey and tafe_survey dataframes contain many columns that we don't need to complete our analysis. \n",
-    "We'll use the pd."
+    "We'll use the `pd.DataFrame.drop` function, whit param `axis` equals to 1 (for colums)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cc0591b7",
+   "execution_count": 11,
+   "id": "3bca8033",
    "metadata": {},
    "outputs": [],
    "source": [
     "dete_survey_updated = dete_survey.drop(dete_survey.columns[28:49], axis=1)\n",
     "tafe_survey_updated = tafe_survey.drop(tafe_survey.columns[17:66], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "584c1f5c",
+   "metadata": {},
+   "source": [
+    "## Clean Column Names\n",
+    "Each dataframe contains many of the same columns, but the column names are different."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edc43493",
+   "metadata": {},
+   "source": [
+    "For `DETE` survey we'll use the pythonic name convention to columns: \n",
+    "- Make all the capitalization lowercase.\n",
+    "- Remove any trailing whitespace from the end of the strings.\n",
+    "- Replace spaces with underscores ('_')."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "6aa846fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'separationtype', 'cease_date', 'dete_start_date',\n",
+       "       'role_start_date', 'position', 'classification', 'region',\n",
+       "       'business_unit', 'employment_status', 'career_move_to_public_sector',\n",
+       "       'career_move_to_private_sector', 'interpersonal_conflicts',\n",
+       "       'job_dissatisfaction', 'dissatisfaction_with_the_department',\n",
+       "       'physical_work_environment', 'lack_of_recognition',\n",
+       "       'lack_of_job_security', 'work_location', 'employment_conditions',\n",
+       "       'maternity/family', 'relocation', 'study/travel', 'ill_health',\n",
+       "       'traumatic_incident', 'work_life_balance', 'workload',\n",
+       "       'none_of_the_above', 'gender', 'age', 'aboriginal', 'torres_strait',\n",
+       "       'south_sea', 'disability', 'nesb'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dete_survey_updated.columns = dete_survey_updated.columns.str.lower().str.strip().str.replace(' ', '_')\n",
+    "dete_survey_updated.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "076f66d0",
+   "metadata": {},
+   "source": [
+    "For `TAFE` survey we'll use the  [`pd.DataFrame.renme`](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.rename.html?highlight=rename#pandas.DataFrame.rename) function and use the pythonic name convention."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "eab66499",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'Institute', 'WorkArea', 'cease_date', 'separationtype',\n",
+       "       'Contributing Factors. Career Move - Public Sector ',\n",
+       "       'Contributing Factors. Career Move - Private Sector ',\n",
+       "       'Contributing Factors. Career Move - Self-employment',\n",
+       "       'Contributing Factors. Ill Health',\n",
+       "       'Contributing Factors. Maternity/Family',\n",
+       "       'Contributing Factors. Dissatisfaction',\n",
+       "       'Contributing Factors. Job Dissatisfaction',\n",
+       "       'Contributing Factors. Interpersonal Conflict',\n",
+       "       'Contributing Factors. Study', 'Contributing Factors. Travel',\n",
+       "       'Contributing Factors. Other', 'Contributing Factors. NONE',\n",
+       "       'Main Factor. Which of these was the main factor for leaving?',\n",
+       "       'InstituteViews. Topic:1. I feel the senior leadership had a clear vision and direction',\n",
+       "       'InstituteViews. Topic:2. I was given access to skills training to help me do my job better',\n",
+       "       'InstituteViews. Topic:3. I was given adequate opportunities for personal development',\n",
+       "       'InstituteViews. Topic:4. I was given adequate opportunities for promotion within %Institute]Q25LBL%',\n",
+       "       'InstituteViews. Topic:5. I felt the salary for the job was right for the responsibilities I had',\n",
+       "       'InstituteViews. Topic:6. The organisation recognised when staff did good work',\n",
+       "       'InstituteViews. Topic:7. Management was generally supportive of me',\n",
+       "       'InstituteViews. Topic:8. Management was generally supportive of my team',\n",
+       "       'InstituteViews. Topic:9. I was kept informed of the changes in the organisation which would affect me',\n",
+       "       'InstituteViews. Topic:10. Staff morale was positive within the Institute',\n",
+       "       'InstituteViews. Topic:11. If I had a workplace issue it was dealt with quickly',\n",
+       "       'InstituteViews. Topic:12. If I had a workplace issue it was dealt with efficiently',\n",
+       "       'InstituteViews. Topic:13. If I had a workplace issue it was dealt with discreetly',\n",
+       "       'WorkUnitViews. Topic:14. I was satisfied with the quality of the management and supervision within my work unit',\n",
+       "       'WorkUnitViews. Topic:15. I worked well with my colleagues',\n",
+       "       'WorkUnitViews. Topic:16. My job was challenging and interesting',\n",
+       "       'WorkUnitViews. Topic:17. I was encouraged to use my initiative in the course of my work',\n",
+       "       'WorkUnitViews. Topic:18. I had sufficient contact with other people in my job',\n",
+       "       'WorkUnitViews. Topic:19. I was given adequate support and co-operation by my peers to enable me to do my job',\n",
+       "       'WorkUnitViews. Topic:20. I was able to use the full range of my skills in my job',\n",
+       "       'WorkUnitViews. Topic:21. I was able to use the full range of my abilities in my job. ; Category:Level of Agreement; Question:YOUR VIEWS ABOUT YOUR WORK UNIT]',\n",
+       "       'WorkUnitViews. Topic:22. I was able to use the full range of my knowledge in my job',\n",
+       "       'WorkUnitViews. Topic:23. My job provided sufficient variety',\n",
+       "       'WorkUnitViews. Topic:24. I was able to cope with the level of stress and pressure in my job',\n",
+       "       'WorkUnitViews. Topic:25. My job allowed me to balance the demands of work and family to my satisfaction',\n",
+       "       'WorkUnitViews. Topic:26. My supervisor gave me adequate personal recognition and feedback on my performance',\n",
+       "       'WorkUnitViews. Topic:27. My working environment was satisfactory e.g. sufficient space, good lighting, suitable seating and working area',\n",
+       "       'WorkUnitViews. Topic:28. I was given the opportunity to mentor and coach others in order for me to pass on my skills and knowledge prior to my cessation date',\n",
+       "       'WorkUnitViews. Topic:29. There was adequate communication between staff in my unit',\n",
+       "       'WorkUnitViews. Topic:30. Staff morale was positive within my work unit',\n",
+       "       'Induction. Did you undertake Workplace Induction?',\n",
+       "       'InductionInfo. Topic:Did you undertake a Corporate Induction?',\n",
+       "       'InductionInfo. Topic:Did you undertake a Institute Induction?',\n",
+       "       'InductionInfo. Topic: Did you undertake Team Induction?',\n",
+       "       'InductionInfo. Face to Face Topic:Did you undertake a Corporate Induction; Category:How it was conducted?',\n",
+       "       'InductionInfo. On-line Topic:Did you undertake a Corporate Induction; Category:How it was conducted?',\n",
+       "       'InductionInfo. Induction Manual Topic:Did you undertake a Corporate Induction?',\n",
+       "       'InductionInfo. Face to Face Topic:Did you undertake a Institute Induction?',\n",
+       "       'InductionInfo. On-line Topic:Did you undertake a Institute Induction?',\n",
+       "       'InductionInfo. Induction Manual Topic:Did you undertake a Institute Induction?',\n",
+       "       'InductionInfo. Face to Face Topic: Did you undertake Team Induction; Category?',\n",
+       "       'InductionInfo. On-line Topic: Did you undertake Team Induction?process you undertook and how it was conducted.]',\n",
+       "       'InductionInfo. Induction Manual Topic: Did you undertake Team Induction?',\n",
+       "       'Workplace. Topic:Did you and your Manager develop a Performance and Professional Development Plan (PPDP)?',\n",
+       "       'Workplace. Topic:Does your workplace promote a work culture free from all forms of unlawful discrimination?',\n",
+       "       'Workplace. Topic:Does your workplace promote and practice the principles of employment equity?',\n",
+       "       'Workplace. Topic:Does your workplace value the diversity of its employees?',\n",
+       "       'Workplace. Topic:Would you recommend the Institute as an employer to others?',\n",
+       "       'gender', 'age', 'employment_status', 'position', 'institute_service',\n",
+       "       'role_service'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rename_columns= {'Record ID': 'id',\n",
+    "'CESSATION YEAR': 'cease_date',\n",
+    "'Reason for ceasing employment': 'separationtype',\n",
+    "'Gender. What is your Gender?': 'gender',\n",
+    "'CurrentAge. Current Age': 'age',\n",
+    "'Employment Type. Employment Type': 'employment_status',\n",
+    "'Classification. Classification': 'position',\n",
+    "'LengthofServiceOverall. Overall Length of Service at Institute (in years)': 'institute_service',\n",
+    "'LengthofServiceCurrent. Length of Service at current workplace (in years)': 'role_service'}\n",
+    "\n",
+    "tafe_survey.rename(columns=rename_columns, inplace=True)\n",
+    "\n",
+    "tafe_survey.columns"
    ]
   }
  ],
